# prep-scout

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  Makefile  SCRAPER.md  alembic.ini  docker-compose.yml  init.md  main.py  pyproject.toml  response-all.html  todo.md
app/: main.py  session.py
app/models/: lastmile_product.py  price_history.py  products.py
app/queries/: lastmile_category.py  lastmile_product.py  price_history.py  products.py
app/scraper/: exceptions.py  last_mile.py  oxylabs.py  runner.py
app/scraper/lastmile/: request.py  save.py  scraper.py  types.py
db/: repository.py  session.py
db/migrations/: env.py
db/migrations/versions/: 30235cd6759b_create_products_and_price_history_tables.py
db/models/: price_history.py  products.py
db/queries/: price_history.py  products.py
docs/responses/lastmile/: vaisiai-ir-uogos.json
migrations/: env.py
migrations/versions/: 1c6acd143992_initial_tables.py  4d77420cb242_initial_tables.py  c3f04ea8d9b1_add_rimi_products.py  df64ffff8b33_initial_tables.py
src/: main.py  session.py
src/models/: lastmile_category.py  lastmile_product.py  rimi_product.py  store.py
src/queries/: base.py  lastmile_category.py  lastmile_product.py  products.py
src/scraper/: exceptions.py  oxylabs.py  runner.py
src/scraper/lastmile/: request.py  save.py  scraper.py  types.py
src/scraper/rimi/: request.py  save.py  scraper.py  types.py
tests/: conftest.py  test_lastmile_categories.py  test_lastmile_products.py  test_lastmile_scraper.py
tests/fixtures/expected/: lastmile-category-tree.json
(+1 files in other folders)
