[project]
name = "prep-scout"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "anthropic>=0.101.0",
    "beautifulsoup4>=4.14.3",
    "lxml>=6.1.0",
    "oxylabs>=3.0.0",
    "psycopg>=3.3.4",
    "sqlalchemy>=2.0.49",
]
