[project]
name = "prep-scout"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "anthropic>=0.101.0",
    "apscheduler>=3.11.2",
    "beautifulsoup4>=4.14.3",
    "python-dotenv>=1.0.0",
    "lxml>=6.1.0",
    "oxylabs>=3.0.0",
    "psycopg[binary]>=3.3.4",
    "pydantic>=2.13.4",
    "sqlalchemy>=2.0.49",
    "sqlmodel>=0.0.38",
]
